# your-assistant

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile.discord  Dockerfile.http_service  LICENSE  README.md  dev-setup.sh  mypy.ini  pyproject.toml
.github/workflows/: test-build.yml
your-assistant/: search.py
your_assistant/: __init__.py  search.py
your_assistant/core/: indexer.py  llm.py  llms.py  loader.py  orchestrator.py  parser.py  responder.py  tools.py  utils.py
your_assistant/server/: cli.py  discord_service.py  http_service.py
your_assistant/tests/: test_llms.py
your_assistant/tests/core/: test_indexer.py  test_llm.py  test_llms.py  test_responder.py  test_tools.py  test_utils.py
